# rafa-br34.dev

./: .clang-format  .eslintrc.cjs  .gitignore  .prettierrc.json  404.html  CMakePresets.json  CNAME  README.md  __next.!KG1haW4p.__PAGE__.txt  __next.!KG1haW4p.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.txt  background.html  background.txt  blog.html  blog.txt  components.json  dprint.json  eslint.config.mjs  gallery.html  gallery.txt  index.css  index.css.map  index.html  index.js  index.js.map  index.txt  next.config.ts  package-lock.json  package.json  projects  projects.html  projects.txt  rollup.config.mjs  tsconfig.json  webpack.config.mjs
.github/: dependabot.yml
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
assets/: licensing.yml
background/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.background.__PAGE__.txt  __next.background.txt
blog/: 2026-07-02-first-blog-post.html  2026-07-02-first-blog-post.txt  __next.!KG1haW4p.blog.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt
gallery/: __next.!KG1haW4p.gallery.__PAGE__.txt  __next.!KG1haW4p.gallery.txt  __next.!KG1haW4p.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt
html/: index.html
js/: background.bundle.js  background.bundle.js.map  background_compute.wasm  gallery.bundle.js  gallery.bundle.js.map  index.bundle.js  (+6 more)
src/wasm/: CMakeLists.txt  CMakePresets.json  background_compute.c  background_compute.js  background_compute.wasm  background_compute.wasm.map  kvec.h  particle_life_compute.c  particle_life_compute.js  particle_life_compute.wasm
(+137 files in other folders)
